<resources>
    <string name="app_name">Cook Pocket</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_account">Account</string>
    <string name="title_category">Kategori</string>
    <string name="title_resep_tersedia">Rekomendasi Resep</string>
    <string name="food_image">Nama Makanan</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="kolom_pencarian_untuk_menu">Kolom pencarian untuk menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorit">Favorit</string>
    <string name="add_my_cart">add my cart</string>
    <string name="favorite">Favorite</string>
    <string name="back">Back</string>
    <string name="passsword">Password</string>
    <string name="no_hp">No Telphone</string>
    <string name="desc_login">Login Akun Kamu Yuk!</string>
    <string name="email">Email</string>
    <string name="btn_login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="title_daftar">Belum Punya Akun?</string>
    <string name="desc_title_login">Belum Punya Akun?</string>
    <string name="tv_btn_signup">Daftar</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pesan">Pesan</string>
    <string name="bahan_bahan">Bahan - Bahan</string>
    <string name="langkah_pembuatan">Langkah Pembuatan</string>
    <string name="Keranjang">Keranjang</string>
    <string name="ayam_goreng">Ayam goreng</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="toko_saya">Toko Saya</string>
    <string name="usernameHome">Username</string>
    <string name="cari_menu">Mau menu apa hari ini?</string>
    <string name="makanan_berat">Makanan Berat</string>
    <string name="makanan_tradisional">Makanan Tradisional</string>
    <string name="makanan_sehat">Makanan Sehat</string>
    <string name="konfirmasi_pesanan">Konfirmasi Pesanan</string>
    <string name="Username">Username</string>
    <string name="pemisah">|</string>
    <string name="no_telephone">No Telpon</string>
    <string name="deskripsi_alamat">Alamat Lengkap</string>
    <string name="alamat_pengiriman">Alamat Pengiriman</string>
    <string name="no_item_fav">Tidak ada item favorite</string>
    <string name="toko_mitra">Toko Mitra</string>
    <string name="harga_makanan">harga makanan</string>
    <string name="_0">1</string>
    <string name="pesan_antar">Pesan Antar</string>
    <string name="buat_pesanan">Buat Pesanan</string>
    <string name="rp_0">Rp. 0</string>
    <string name="total_biaya_pengiriman">Total Biaya Pengiriman</string>
    <string name="total_pesanan">Total Pesanan</string>
    <string name="ambil_sendiri">Ambil Sendiri</string>
    <string name="alamat">Alamat</string>
    <string name="ganti_kata_sandi">Ganti Kata Sandi</string>
    <string name="ganti_no_telephone">Ganti No Telephone</string>
    <string name="ganti_email">Ganti Email</string>
    <string name="ganti_username">Ganti Username</string>
    <string name="account">Account</string>
    <string name="gmail">Gmail</string>
    <string name="username_account">Username</string>
    <string name="ubah_username">Ubah Username</string>
    <string name="change_username">username</string>
    <string name="maks_10_karakter">Maks. 10 karakter</string>
    <string name="ubah_email">Ubah Email</string>
    <string name="email_saat_ini">Email Saat ini</string>
    <string name="simpan">Simpan</string>
    <string name="ubah_no_telepon">Ubah No Telepon</string>
    <string name="no_telepone_saat_ini">No Telepone Saat Ini</string>
    <string name="ganti_no_telepon">Ganti No Telepon</string>
    <string name="masukkan_password_lama_anda">Masukkan Password Lama anda</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="kata_sandi_lama">Password Old</string>
    <string name="kata_sandi_baru">Password New</string>
    <string name="masukkan_kata_sandi_terbaru">Masukkan Password Terbaru</string>
    <string name="ubah_alamat">Ubah Alamat</string>
    <string name="masukkan_informasi_alamat_anda">Masukkan Informasi Alamat Anda</string>
    <string name="alamat_rumah">Alamat Rumah</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="provinsi">Provinsi</string>
    <string name="reset">Hapus</string>
    <string name="submit">Pesan</string>
    <string name="plus">Plus\n</string>
    <string name="minus">Minus</string>
    <string name="produk">Produk</string>
    <string name="hapus">Hapus</string>
    <string name="deskripsi_makanan_yang_menarik_dan_informatif">Deskripsi makanan yang menarik dan informatif.</string>
    <string name="pesanan_selesai">Pesanan Selesai</string>
    <string name="pesanan_sedang_di_proses">Pesanan sedang di Proses</string>
    <string name="cook_pocket">Cook Pocket</string>
    <string name="versi">Versi 1.0</string>

    <!--    Alamat-->
    <string name="error_empty_address">Alamat rumah harus diisi</string>
    <string name="error_empty_kelurahan">Kelurahan harus diisi</string>
    <string name="error_empty_kecamatan">Kecamatan harus diisi</string>
    <string name="error_empty_kabupaten">Kabupaten harus diisi</string>
    <string name="error_empty_provinsi">Provinsi harus diisi</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="confirm_save_address">Apakah Anda yakin ingin menyimpan alamat ini?</string>
    <string name="success_save_address">Alamat berhasil diperbarui</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="tambah">Tambah</string>
    <string name="deskripsi_makanan">Deskripsi makanan</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="konfirmasi_logout">Konfirmasi Logout</string>
    <string name="apakah_anda_yakin_ingin_keluar">Apakah Anda yakin ingin keluar?</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Ya</string>
    <string name="baca_resep">Baca Resep</string>
    <string name="resep_siap_pesan">Resep Siap Pesan</string>
    <string name="deskripsi">Deskripsi</string>

</resources>