<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.account.change.ChangeUsernameActivity">

    <ImageView
        android:id="@+id/iv_back_username"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/back"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_change_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/ubah_username"
        android:textSize="20sp"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/iv_back_username"
        tools:layout_editor_absoluteX="30dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_change_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_change_username"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/change_username" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/desc_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:text="@string/maks_10_karakter"
        app:layout_constraintTop_toBottomOf="@+id/ed_change_username" />

    <Button
        android:id="@+id/btn_simpan_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/simpan"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_username" />

    <ProgressBar
        android:id="@+id/progresbar_username"
        android:layout_width="50dp"
        android:visibility="gone"
        android:layout_height="50dp"
        android:progressTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>