<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    app:cardCornerRadius="16dp"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    tools:context=".view.ui.adapter.AdapterAddProductActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- ImageView for the food image -->
        <ImageView
            android:id="@+id/img_add_product"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:background="@drawable/placeholder_foto_makanan"
            android:contentDescription="@string/food_image"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_cook_pocket"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- TextView for the food name -->
        <TextView
            android:id="@+id/foodName_add_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nama_makanan"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_add_product"
            app:layout_constraintTop_toTopOf="@id/img_add_product"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="20dp" />

        <!-- TextView for the food description -->
        <TextView
            android:id="@+id/foodDescription_add_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_makanan"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:maxLines="3"
            app:layout_constraintStart_toEndOf="@id/img_add_product"
            app:layout_constraintTop_toBottomOf="@id/foodName_add_product"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp" />

        <ImageView
            android:id="@+id/btn_plus_add_product"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_add"
            android:src="@drawable/baseline_add_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodDescription_add_product" />


        <TextView
            android:id="@+id/tv_quantity_add_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            android:layout_marginTop="13dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_plus_add_product"
            app:layout_constraintTop_toBottomOf="@+id/foodDescription_add_product" />


        <ImageView
            android:id="@+id/btn_minus_add_product"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_add"
            android:src="@drawable/baseline_mines"
            app:layout_constraintEnd_toStartOf="@+id/tv_quantity_add_product"
            app:layout_constraintTop_toBottomOf="@+id/foodDescription_add_product" />

        <Button
            android:id="@+id/button_add_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/tambah"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_plus_add_product" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>